
MySQL Connector/Python
Copyright (c) 2009, 2022, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.0.30
=======

- WL#15151: Increase to 88 characters per line
- WL#15137: Fix linting issues
- WL#15035: Enforce PEP 7 and PEP 8 coding style
- WL#14822: Refactor the authentication plugin mechanism
- WL#14815: Support OpenSSL 3.0
- BUG#28821983: Fix rounding errors for decimal values

v8.0.29
=======

- WL#14860: Support FIDO authentication (c-ext)
- WL#14852: Align TLS option checking across connectors
- WL#14824: Remove Python 3.6 support
- WL#14679: Allow custom class for data type conversion in Django backend
- WL#14665: SSPI Kerberos authentication for Windows (pure-python)
- BUG#33861549: Replace SHOW VARIABLES inefficient statements
- BUG#33747585: Fix error when using an expression as a column without an alias
- BUG#33729842: Character set 'utf8mb3' support
- BUG#33481203: OverflowError for MySQL BIGINT on c-ext
- BUG#33203161: Exception is thrown on close connection with pooling
- BUG#30203754: Prepared stmt fails on cext with BIGINTS
- BUG#28877987: Return bytes or bytearray if decoding fails
- BUG#27634914: Remove mention of unsupported functionality in Session docstring
- BUG#23338623: Add support for Decimal parsing in protocol.py
- BUG#23324748: Guarantee file closing of input files in optionfile
- BUG#21528553: Fix API inconsistency when using consume_results=True
- BUG#21498719: Fix conversion of Python bytearray (c-ext)
- BUG#20065830: NaN is not supported

v8.0.28
=======

- WL#14814: Remove support for TLS 1.0 and 1.1
- WL#14813: Add support for Python 3.10
- WL#14720: Support for Multi Factor authentication (pure Python)
- WL#14667: Support for Multi Factor authentication (c-ext)
- BUG#33486094: Stored value in Decimal field is returned as str on prepared pure python cursor
- BUG#33410592: Fix compiler warnings
- BUG#33409819: Fix failure when using a conversion class in CMySQLConnection